--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -8,6 +8,7 @@ Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
 python-dateutil==2.8.1
+python-dotenv==0.10.3
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.10
