--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -58,13 +58,15 @@ services:
 
 # ingress
 ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  enabled: true
+  annotations: 
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: memento.mrzzy.co
+      paths: [ "/api" ]
+      serviceName: backend
+      servicePort: 80
 
   tls: []
   #  - secretName: chart-example-tls
