--- a/chart/templates/services/backend.yaml
+++ b/chart/templates/services/backend.yaml
@@ -7,7 +7,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "memento.fullname" . }}-backend
+  name: {{ .Values.services.backend.name }}
   labels:
 {{ include "memento.labels" . | indent 4 }}
     component: backend
