--- a/chart/templates/services/database.yaml
+++ b/chart/templates/services/database.yaml
@@ -7,7 +7,7 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name:  {{ include "memento.fullname" . }}-database
+  name:  {{ .Values.services.database.name }}
   labels:
 {{ include "memento.labels" . | indent 4 }}
     component: database
