--- a/chart/templates/config/config-env.yaml
+++ b/chart/templates/config/config-env.yaml
@@ -16,10 +16,9 @@ metadata:
 data:
   # postgres config
   POSTGRES_DB: memento
-
   # backend config
-  FLASK_APP: app.py
+  FLASK_APP: "app.py"
   SQL_DATABASE: postgresql
   DATABASE_HOST: "{{ $dbSvcName }}:{{ $dbPort }}"
-  SQLALCHEMY_TRACK_MODIFICATIONS: false
-  SQLALCHEMY_ECHO: false
+  SQLALCHEMY_TRACK_MODIFICATIONS: "0"
+  SQLALCHEMY_ECHO: "0"
