--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -75,18 +75,18 @@ services:
 ingress:
   enabled: true
   annotations: 
-    kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    kubernetes.io/ingress.class: "nginx"
+    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
   hosts:
     - host: memento.mrzzy.co
       paths: [ "/api" ]
       serviceName: memento-backend
       servicePort: 80
 
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls:
+    - secretName: memento-tls-cert
+      hosts:
+        - memento.mrzzy.co
 
 # resource limits
 resources: {}
