--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -8,6 +8,7 @@ Flask-SQLAlchemy==2.4.1
 gevent==1.4.0
 gevent-websocket==0.10.1
 greenlet==0.4.15
+healthcheck==1.3.3
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
@@ -18,3 +19,4 @@ python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.10
 Werkzeug==0.16.0
+wheel==0.33.6
