Tag backend docker image with release label

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - database-data:/var/lib/postgresql/data
   # memento-backend container
   backend:
-    image: mrzzy/memento-backend
+    image: mrzzy/memento-backend:0.1-apiv1
     build:
       context: .
       dockerfile: containers/backend/Dockerfile
