Clean up project makefile - delegate to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - database-data:/var/lib/postgresql/data
   # memento-backend container
   backend:
-    image: mrzzy/memento-backend
+    image: "mrzzy/memento-backend:latest"
     build:
       context: .
       dockerfile: containers/backend/Dockerfile
