Added develop build stage to memento-backend docker  image
Development image features hot reloading on changes to files

--- a/containers/backend/Dockerfile
+++ b/containers/backend/Dockerfile
@@ -4,7 +4,7 @@
 # Dockefile
 #
 
-FROM python:3.7-alpine as develop
+FROM python:3.7-alpine AS base
 
 # setup nonroot user to drop root permissions
 RUN addgroup -S user && adduser -S user -G user
@@ -16,7 +16,7 @@ WORKDIR /backend
 # install packages & pip packages
 COPY src/backend/requirements.txt /backend/
 ENV PATH=/backend/.local/bin:$PATH
-RUN apk add --no-cache postgresql-libs bash && \
+RUN apk add --no-cache postgresql-libs && \
     apk add --no-cache --virtual .build-deps gcc musl-dev postgresql-dev && \
     python3 -m pip install -r requirements.txt --no-cache-dir && \
     apk --purge del .build-deps
@@ -30,11 +30,22 @@ ENV PATH=/scripts:$PATH
 COPY containers/backend /scripts
 RUN chmod u+x -R /scripts
 
-# copy project source code
-COPY src/backend /backend/
-
-# set backend container entrypoint
+# configure backend container entrypoint
 EXPOSE 5000
 ENV FLASK_APP=app.py
 ENTRYPOINT [ "/scripts/entrypoint.sh" ]
-CMD python run.py
+#
+# copy project source code
+COPY src/backend /backend
+
+## develop image
+FROM base AS develop
+
+RUN apk add --no-cache entr the_silver_searcher
+CMD ["ag", "-g", "''", "|", "entr", "-r", "python", "run.py"]
+
+## production image
+FROM base AS production
+
+# set backend container entrypoint
+CMD ["python","run.py"]
