Move copy src directive to prevent package reinstall on source code change

--- a/containers/backend/Dockerfile
+++ b/containers/backend/Dockerfile
@@ -21,7 +21,7 @@ RUN apk add --no-cache postgresql-libs && \
     python3 -m pip install -r requirements.txt --no-cache-dir && \
     apk --purge del .build-deps
 
-# configure API version
+# configure envrionment variable sessions
 ARG API_VERSION=0
 ENV API_VERSION=$API_VERSION
 
@@ -34,18 +34,19 @@ RUN chmod u+x -R /scripts
 EXPOSE 5000
 ENV FLASK_APP=app.py
 ENTRYPOINT [ "/scripts/entrypoint.sh" ]
-#
-# copy project source code
-COPY src/backend /backend
 
 ## develop image
 FROM base AS develop
-
+# install development tools
 RUN apk add --no-cache entr the_silver_searcher
+# copy project source code
+COPY src/backend /backend
+# develop container comand
 CMD ["ag", "-g", "''", "|", "entr", "-r", "python", "run.py"]
 
 ## production image
 FROM base AS production
-
-# set backend container entrypoint
+# copy project source code
+COPY src/backend /backend
+# production container comand
 CMD ["python","run.py"]
