--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     ports:
       - "5000:5000"
     env_file: ".env"
+    environment:
+      - PYTHONUNBUFFERED=1
     depends_on:
       - postgres
 volumes:
