Remove kind field from identity's user model

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,6 @@ services:
     depends_on:
       - postgres
     volumes:
-      - "./src/backend:/backend:ro"
+      - "./src/backend:/backend"
 volumes:
   database-data:
