Derive secrets from env file instead of hardcoding in values file

--- a/chart/templates/deployments/backend.yaml
+++ b/chart/templates/deployments/backend.yaml
@@ -47,7 +47,7 @@ spec:
             - configMapRef:
                 name: {{ include "memento.fullname" . }}-config-env
             - secretRef:
-                name: {{ include "memento.fullname" . }}-database
+                name: {{ include "memento.fullname" . }}-secrets
           livenessProbe:
             httpGet:
               path: /healthz
