--- a/chart/templates/secrets/database.yaml
+++ b/chart/templates/secrets/database.yaml
@@ -7,9 +7,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "memento.fullname" . }}-database
+  name: {{ include "memento.fullname" . }}-secrets
   labels:
 {{ include "memento.labels" . | indent 4 }}
 stringData:
-  POSTGRES_USER: {{ .Values.credentials.database.user }}
-  POSTGRES_PASSWORD: {{ .Values.credentials.database.password }}
+  {{- .Files.Get ".env" | replace "=" ": " | nindent 2 -}}
