--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -10,6 +10,7 @@ fullnameOverride: ""
 releaseKind: dev
 environment: development
 
+
 # images
 images:
   database:
@@ -23,12 +24,10 @@ images:
 
 imagePullSecrets: []
 
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name:
+# deployment 
+deployment:
+  database:
+    subPath:
 
 # scaling
 scaling: 
@@ -38,6 +37,13 @@ scaling:
 # security
 podSecurityContext: {}
   # fsGroup: 2000
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name:
 
 securityContext: {}
   # capabilities:
@@ -57,7 +63,7 @@ affinity: {}
 # services
 services:
   database:
-    name: postgresql
+    name: postgres
     type: ClusterIP
     port: 5432
   backend:
@@ -70,7 +76,7 @@ ingress:
   enabled: true
   annotations: 
     kubernetes.io/ingress.class: "nginx"
-    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
+    cert-manager.io/cluster-issuer: "letsencrypt-production"
   hosts:
     - host: memento.mrzzy.co
       paths: [ "/api" ]
