--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "cross-fetch": "^3.0.4",
     "dotenv": "^8.2.0",
+    "isomorphic-ws": "^4.0.1",
     "js-cookie": "^2.2.1",
     "node-fetch": "^2.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "ws": "^7.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
