--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -27,7 +27,7 @@ imagePullSecrets: []
 # deployment 
 deployment:
   database:
-    subPath:
+    subPath: "memento_db"
 
 # scaling
 scaling: 
@@ -77,6 +77,8 @@ ingress:
   annotations: 
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-production"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
   hosts:
     - host: memento.mrzzy.co
       paths: [ "/api" ]
