--- a/chart/templates/config/config-env.yaml
+++ b/chart/templates/config/config-env.yaml
@@ -17,8 +17,10 @@ data:
   # postgres config
   POSTGRES_DB: memento
   # backend config
-  FLASK_APP: "app.py"
   SQL_DATABASE: postgresql
   DATABASE_HOST: "{{ $dbSvcName }}:{{ $dbPort }}"
   SQLALCHEMY_TRACK_MODIFICATIONS: "0"
   SQLALCHEMY_ECHO: "0"
+  # frontend config
+  BACKEND_API_HOST: "memento-backend:80"
+  REACT_APP_BACKEND_API_HOST: "memento.mrzzy.co"
