--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -7,8 +7,8 @@
 # general
 nameOverride: ""
 fullnameOverride: ""
-releaseKind: dev
-environment: development
+releaseKind: prod
+environment: production
 
 
 # images
